# radicle-bins

./: .gitignore  .gitmodules  .license-header  .rustfmt.toml  Cargo.toml  DCO  LICENSE  README.md  deny.toml
.buildkite/: pipeline.yaml
.ci/: .env  advisory  bins  build-test  clippy  docker-seed  docs  run  ui
.docker/seed/: Dockerfile
docs/: deployment.md
infra/gcloud/: create-instance  instance
infra/scripts/: assets.sh  dist.sh  run-seed.sh  setup.sh
infra/systemd/: seed.service
keyutil/: Cargo.toml  README.md
keyutil/src/: main.rs
rad/: Cargo.toml
rad/src/: main.rs
seed/: Cargo.toml  README.md
seed/src/: frontend.rs  lib.rs  main.rs  sse.rs
seed/systemd/: radicle-seed.example  radicle-seed.service.example
seed/ui/: .gitignore  README.md  package.json  rollup.config.js
seed/ui/public/: colors.css  global.css  index.html  typography.css
seed/ui/scripts/: install-twemoji-assets.sh  setupTypeScript.js
seed/ui/src/: App.svelte  events.js  helpers.js  main.js  state.js
seed/ui/src/Components/: Avatar.svelte  Badge.svelte  Copyable.svelte  Emoji.svelte  Header.svelte  Input.svelte  Peer.svelte  PeerList.svelte  Project.svelte  User.svelte  index.js
seed/ui/src/Components/Icon/: ArrowBoxUpRight.svelte  At.svelte  Branch.svelte  CheckSmall.svelte  Commit.svelte  Computer.svelte  CopySmall.svelte  IconWrapper.svelte  User.svelte  index.js  logo.svelte
signed-refs/: Cargo.toml
signed-refs/src/: args.rs  lib.rs  main.rs  signer.rs
systemd/seed/: radicle-seed  radicle-seed.service
