[package]
name = "radicle-seed-node"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
argh = "0.1.3"
chrono = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["sync"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = { version = "0.2.5", default-features = false }
serde_json = "1"
serde = "1"

[dependencies.librad]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "cb7703226647999f967b86a403be32a4a40b3299"

[dependencies.radicle-seed]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "cb7703226647999f967b86a403be32a4a40b3299"

[dependencies.radicle-avatar]
git = "https://github.com/radicle-dev/radicle-avatar.git"
rev = "4e34e6b992fd9f465b0547a5693b47b0d41dea01"
