[package]
name = "radicle-seed-node"
version = "1.0.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
argh = "0.1"
chrono = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["sync"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = { version = "0.2.5", default-features = false }
serde_json = "1"
serde = "1"

librad = "0"
radicle-avatar = "0"
radicle-seed = "0"
