[package]
name = "radicle-seed-node"
version = "1.0.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
argh = "0.1"
chrono = "0.4"
futures = "0.3"
nonempty = "0.6"
num_cpus = "1"
tokio = { version = "1.2", features = ["macros", "rt", "sync"], default-features = false }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
warp = { version = "0.3", default-features = false }
serde_json = "1"
serde = "1"
tracing-stackdriver = { git = "https://github.com/radicle-dev/tracing-stackdriver.git", optional = true }

librad = "0"
radicle-avatar = "0"
radicle-seed = "0"

[features]
default = []
gcp = ["tracing-stackdriver"]
