[package]
name = "signed-refs"
description = "Sign reference tool"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
argh = "0.1"
radicle-keystore = "0"
serde_json = "1.0"

[dependencies.librad]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "5f2a0b3a985f5cea62b6ad0b74c2c961e33526ad"
